--- a/build.gradle
+++ b/build.gradle
@@ -10,17 +10,17 @@ repositories {
     url 'https://m2.dv8tion.net/releases'
   }
   mavenCentral()
-  jcenter()
 }
 
 dependencies {
   testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
   testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+  implementation 'io.github.cdimascio:dotenv-java:2.3.2'
   implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
   implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
   implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.19.0'
   implementation 'net.dv8tion:JDA:5.0.0-beta.3'
-  implementation 'com.sedmelluq:lavaplayer:1.3.77'
+  implementation 'com.sedmelluq:lavaplayer:1.3.78'
 
   compileOnly 'org.projectlombok:lombok:1.18.24'
   annotationProcessor 'org.projectlombok:lombok:1.18.24'
